harvester: (SNAPSHOT) first tests pass